[metadata]
name = certbot-dns-leaseweb
author =
  iwaseatenbyagrue
author_email =
  iwaseatenbyagrue@gmail.com
url = https://gitlab.com/iwaseatenbyagrue/certbot-dns-leaseweb
version = file: VERSION
license = BSD
description = Automate dns-01 challenge completion using Leaseweb's Domains API.
long-description = file: README.md


[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = find:
package_dir =
  =src

test_suite = tests

setup_requires =
    setuptools

install_requires =
  certbot>=1.1.0
  setuptools
  zope.interface
  requests

[options.extras_require]
test =
  tox
  pylint
  mock
  requests-mock

[options.entry_points]
certbot.plugins =
  dns-leaseweb = certbot_dns_leaseweb.plugin:LeasewebAuthenticator

[options.packages.find]
where=src
