[metadata]
name = certbot-dns-leaseweb
author = iwaseatenbyagrue
author_email = iwaseatenbyagrue@gmail.com
url = https://gitlab.com/iwaseatenbyagrue/certbot-dns-leaseweb
version = file: VERSION
license = Apache License 2.0
description = Automate dns-01 challenge completion using Leaseweb Domains API.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://gitlab.com/iwaseatenbyagrue/certbot-dns-leaseweb/-/issues


[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = find:
package_dir =
  =src

test_suite = tests

setup_requires =
    setuptools

install_requires =
  certbot>=1.1.0
  setuptools
  zope.interface
  requests

[options.extras_require]
test =
  tox
  pylint
  mock
  requests-mock

[options.entry_points]
certbot.plugins =
  dns-leaseweb = certbot_dns_leaseweb.plugin:LeasewebAuthenticator

[options.packages.find]
where=src
